--- a/portfolio/src/main/webapp/style.css
+++ b/portfolio/src/main/webapp/style.css
@@ -1,9 +1,20 @@
+#head{
+    color:white;
+    text-align:center;
+}
 #content {
   margin-left: auto;
   margin-right: auto;
   width: 650px;
+  text-align:center;
+  color:blue;
 }
-
 #greeting-container {
   margin-top: 20px;
+  text-align:center;
 }
+
+body{
+    background-color: lightblue;
+}
+
